# Obsidian-Vault-Reconstruct-Zettelkasten

./: .claudeignore.txt  .env.example  .gitignore  CLAUDE.md  COMMANDS.md  Modelfile  Modelfile.txt  README.md  SlimModel.txt  Vault Reconstruct Ollama.py  Vault Reconstruct.py  add_frontmatter.py  anki_exporter.py  build_hud.cmd  compile_flags.txt  expand_short_notes.py  fix_quarantined_notes.py  obsidian_vault_improver.py  obsidian_zettelkasten_v2.py  obsidian_zettelkasten_v3_threaded.py  pyproject.toml  regex_link_only.py  requirements.txt  tag_consolidator.py  vault_cli.py  vault_doctor.py  vault_hud.py  vault_pipeline.py
.agents/rules/: antigravity-x1hlol-2.md  antigravity-x1hlol-4.md  antigravity-x1hlol.md  bypass-confirmation.md
autoresearch/: check_data.py  dataloader.go  dataloader.h  generate.py  go.mod  go.sum  inference.py  prepare.py  results.tsv  test_cpp.cpp  train.py
reconstruct_rust/: Cargo.toml  pe_check.py
reconstruct_rust/.cargo/: config.toml  config.toml.bak
reconstruct_rust/src/: dataloader.rs  lib.rs
scripts/: background_train.ps1  build_exe.ps1  build_hud.ps1  create_shortcut.ps1
tests/: test_env_loader.py
tools/: anki_exporter.py  doctor.py  maintenance.py  reconstruct.py  research.py  scanner.cpp
vault_reconstruct/: __init__.py  config.py  env.py  json_extract.py  llm.py  model_recommend.py  paths.py  runner.py  text_protect.py
vault_reconstruct/rag/: __init__.py  harvester.py  manager.py  store.py
