[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "genanki>=0.13.1",
    "google-genai>=1.73.1",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "textual>=8.2.3",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
